created ui to play video and added dimen & string values

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="buttonBackground">#F0DDDBDB</color>
+    <color name="playerViewBackground">#CC000000</color>
 </resources>
